<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#302E2E"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/response1"
            android:layout_width="390dp"
            android:layout_height="300dp"
            android:background="@drawable/receivedmessagebackground"
            android:gravity="start"
            android:text="@string/receiving_field"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/message1"
            android:layout_width="390dp"
            android:layout_height="146dp"
            android:background="@drawable/sendmessagebackground"
            android:gravity="end"
            android:paddingStart="20dp"
            android:paddingEnd="5sp"
            android:text="@string/sending_field"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/MessageInput"
                android:layout_width="309dp"
                android:layout_height="match_parent"
                android:autofillHints="Message"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/button"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/send" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>